Fix for possible scrollbars on some systems

--- a/app/stylesheets/structure.css
+++ b/app/stylesheets/structure.css
@@ -19,7 +19,7 @@
 .chat {
   flex: 1;
   padding: 15px;
-  overflow-y: hidden;
+  overflow: hidden;
 }
 
 .footer {
